--- a/.env.txt
+++ b/.env.txt
@@ -7,12 +7,12 @@ FLOWER_PORT=9090
 
 
 # DOCKER DB
-POSTGRES_DB=mydb
-POSTGRES_USER=root
-POSTGRES_PASSWORD=root
+POSTGRES_DB=connector
+POSTGRES_USER=ular
+POSTGRES_PASSWORD=ular
 POSTGRES_PORT=5432
 
-PGADMIN_EMAIL=admin@example.com
+PGADMIN_EMAIL=eldarakashka@gmail.com
 PGADMIN_PASSWORD=admin
 PGADMIN_PORT=5050
 
