--- a/nginx.conf
+++ b/nginx.conf
@@ -4,7 +4,14 @@ upstream django {
 
 server {
 
-    listen 80;
+    listen 443 ssl http2;    # ssl http2
+    server_name localhost;    # ip server or domain
+
+    ssl_certificate /home/ular/certs/server.crt;
+    ssl_certificate_key /home/ular/certs/server.key;
+
+    ssl_client_certificate /home/ular/certs/ca.crt;
+    ssl_verify_client on;
 
     location / {
         proxy_pass http://django;
